Add secure/httponly cookie support for IID cookie

--- a/framework/servlet/src/cc/alcina/framework/servlet/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/Bundle.properties
@@ -2,3 +2,4 @@ noRefreshOfSavedCache=false
 ServletLayerUtils.maxTransformChunkSize=6000
 ServletLayerUtils.testTransformCascade=false
 ServletLayerUtils.commitTestTransforms=false
+CookieHelper.secure=false
