Abstract domain collection creation, clean demeter refs

--- a/framework/entity/src/cc/alcina/framework/entity/domaintransform/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/domaintransform/Bundle.properties
@@ -1,3 +1,4 @@
 TransformConflicts.ignoreConflicts=false
 ThreadlocalTransformManager.ignoreTransformPermissions=false
 ClassrefScanner.removePersistentClassrefs=false
+ClassrefScanner.commitDisabled=false
