Work on client instance expiration

--- a/framework/entity/src/cc/alcina/framework/entity/entityaccess/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/entityaccess/Bundle.properties
@@ -1,3 +1,4 @@
 TransformPersister.flushWithEveryRequest=true
 CommonPersistenceBase.logTransformReadMetrics=false
 CommonPersistenceBase.botUserAgentExtra=
+ClientInstanceAuthenticationCache.idleTimeoutSecs=0
