Fix txmap vaccuum; add login attempt tracking; dflt query -> raw

--- a/framework/servlet/src/cc/alcina/framework/servlet/module/login/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/module/login/Bundle.properties
@@ -1,1 +1,5 @@
 TwoFactorAuthentication.codeOverride=
+LoginAttempts.maxAttempts=0
+LoginAttempts.maxAttemptsPeriodMins=0
+Authenticator.validateLoginAttempts=false
+Authenticator.recordLoginAttempts=false
