Abstract IPStack API key

--- a/framework/servlet/src/cc/alcina/framework/servlet/servlet/users/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/servlet/users/Bundle.properties
@@ -1,3 +1,4 @@
 GeolocationResolver_FreeGeoip.dummyResolver=false
 GeolocationResolver_Ipstack.dummyResolver=false
+GeolocationResolver_Ipstack.apiKey=b16f9aff294aa3292256fd13cb0b9e80
 UserStories.disabled=false
