--- a/build.properties
+++ b/build.properties
@@ -77,7 +77,7 @@ framework.remote.interface.package=cc/alcina/framework/common/client/remote/**.*
 #GWT compilation
 framework.gwt.classpath.src=${framework.dir}/common/src:${framework.dir}/gwt/src:${framework.dir}/emul/src:${framework.jscodeserver.src.dir}
 framework.gwt.classpath.bin=${framework.entity.build.dir}
-framework.gwt.classpath.lib=${framework.lib.dir}/common/persistence-api.jar:${framework.lib.dir}/common/jaxb-api.jar:${framework.lib.dir}/gwt/gwtx-1.5.2.jar:${framework.lib.dir}/gwt/gwittir-trunk.jar:${framework.lib.dir}/gwt/gwt-html5-database.jar:${framework.lib.dir}/gwt/gwt-user.jar:${framework.lib.dir}/gwt/validation-api-1.0.0.GA.jar:${framework.lib.dir}/gwt/validation-api-1.0.0.GA-sources.jar
+framework.gwt.classpath.lib=${framework.lib.dir}/common/persistence-api.jar:${framework.lib.dir}/common/jaxb-api.jar:${framework.lib.dir}/gwt/gwtx-1.5.2.jar:${framework.lib.dir}/gwt/gwittir-trunk.jar:${framework.lib.dir}/gwt/gwt-html5-database.jar:${framework.lib.dir}/gwt/gwt-user.jar:${framework.lib.dir}/gwt/validation-api-1.0.0.GA.jar:${framework.lib.dir}/gwt/validation-api-1.0.0.GA-sources.jar:${framework.lib.dir}/entity/slf4j-api-1.7.25.jar:${framework.lib.dir}/entity/slf4j-log4j12-1.7.25.jar:${framework.lib.dir}/entity/log4j-1.2.17.jar
 
 framework.gwt.jvm.arg1=
 framework.gwt.jvm.arg2=
