mvcc - upgrade xero sync

--- a/framework/servlet/src/cc/alcina/framework/servlet/servlet/loglevels.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/servlet/loglevels.properties
@@ -4,6 +4,7 @@ log.level.cc.alcina.framework.entity.domaintransform.event.DomainTransformPersis
 log.level.cc.alcina.framework.entity.entityaccess.cache.DomainStore.__metric=INFO
 log.level.cc.alcina.framework.entity.entityaccess.cache.DomainStore=INFO
 log.level.cc.alcina.framework.servlet.servlet.control.AppLifecycleManager=INFO
+log.level.cc.alcina.framework.entity.entityaccess.cache.mvcc.Transaction=INFO
 log.level.org.apache.kafka=WARN
 log.level.org.apache.http=WARN
 log.level.org.apache.http.wire=WARN
