Refactor transform/transaction packages; layers

--- a/framework/entity/src/cc/alcina/framework/entity/entityaccess/transform/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/entityaccess/transform/Bundle.properties
@@ -3,3 +3,5 @@ TransformCommit.testTransformCascade=true
 TransformCommit.commitTestTransforms=true
 TransformCommit.persistOfflineTransformsAsOneTransaction=false
 TransformPersister.flushWithEveryRequest=true
+BackendTransformQueue.loopDelay=5000
+BackendTransformQueue.maxRunnables=100
