--- a/extras/cluster/tasks-src/alcina-cluster-tasks.properties
+++ b/extras/cluster/tasks-src/alcina-cluster-tasks.properties
@@ -3,3 +3,4 @@ unpause-jk-worker=cc.alcina.extras.cluster.UnpauseJkWorker
 backup-file=cc.alcina.extras.cluster.BackupFile
 backup-files=cc.alcina.extras.cluster.BackupFiles
 javac-ex=cc.alcina.extras.cluster.JavacEx
+copy-ex=cc.alcina.extras.cluster.CopyEx
