--- a/framework/entity/src/cc/alcina/framework/entity/entityaccess/transform/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/entityaccess/transform/Bundle.properties
@@ -5,3 +5,4 @@ TransformCommit.persistOfflineTransformsAsOneTransaction=false
 TransformPersister.flushWithEveryRequest=true
 BackendTransformQueue.loopDelay=5000
 BackendTransformQueue.maxRunnables=100
+TransformCommit.commitAsWrapperUser=false
