--- a/extras/wd/src/cc/alcina/extras/webdriver/Bundle.properties
+++ b/extras/wd/src/cc/alcina/extras/webdriver/Bundle.properties
@@ -2,3 +2,4 @@ WDManager.overrideTestTimeout=0
 WDUtils.width=1440
 WDUtils.height=900
 WDManager.allowCloseBrowser=true
+Gallery.defaultLocalPath=/tmp/gallery
