--- a/build.properties
+++ b/build.properties
@@ -49,7 +49,8 @@ extras.rpc.servlet.src.dir=${extras.rpc.servlet.dir}/src
 extras.rpc.servlet.build.dir=${extras.rpc.servlet.dir}/build
 
 extras.rpc.client.dir=${alcina.home}/extras/rpc/client
-extras.rpc.client.src.dir=${extras.rpc.servlet.dir}/src
+extras.rpc.client.build.dir=${extras.rpc.client.dir}/build
+extras.rpc.client.src.dir=${extras.rpc.client.dir}/src
 
 extras.dev.dir=${alcina.home}/extras/dev
 extras.dev.src.dir=${extras.dev.dir}/src
