--- a/framework/entity/src/cc/alcina/framework/entity/entityaccess/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/entityaccess/Bundle.properties
@@ -1,3 +1,3 @@
 CommonPersistenceBase.logTransformReadMetrics=false
 CommonPersistenceBase.botUserAgentExtra=
-ClientInstanceAuthenticationCache.idleTimeoutSecs=0
+SessionManager.idleTimeoutSecs=0
