--- a/.project
+++ b/.project
@@ -27,4 +27,15 @@
 		<nature>com.google.gdt.eclipse.core.webAppNature</nature>
 		<nature>com.gwtplugins.gwt.eclipse.core.gwtNature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1600310486758</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>node_modules|.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
