--- a/build.xml
+++ b/build.xml
@@ -51,9 +51,9 @@
 			<compilerarg value="${alcina.compiler.args}" />
 		</javac>
 		<mkdir dir="${extras.rpc.client.build.dir}" />
-		<javac target="8" source="8" includeantruntime="false" debug="on"  destdir="${extras.rpc.client.build.dir}">
-			<src path="${extras.rpc.client.src.dir}"/>
-			<exclude name="com/google/gwt/user/client/translatable/**"/>
+		<javac target="8" source="8" includeantruntime="false" debug="on" destdir="${extras.rpc.client.build.dir}">
+			<src path="${extras.rpc.client.src.dir}" />
+			<exclude name="com/google/gwt/user/client/translatable/**" />
 			<classpath>
 				<path refid="framework.common.lib.path" />
 				<pathelement path="${framework.entity.build.dir}" />
@@ -61,17 +61,17 @@
 			<compilerarg value="${alcina.compiler.args}" />
 		</javac>
 		<mkdir dir="${extras.rpc.servlet.build.dir}" />
-		<javac target="8" source="8" includeantruntime="false" debug="on"  destdir="${extras.rpc.servlet.build.dir}">
-			<src path="${extras.rpc.client.src.dir}"/>
-			<src path="${extras.rpc.servlet.src.dir}"/>
-			<exclude name="com/google/gwt/user/client/translatable/**"/>
+		<javac target="8" source="8" includeantruntime="false" debug="on" destdir="${extras.rpc.servlet.build.dir}">
+			<src path="${extras.rpc.client.src.dir}" />
+			<src path="${extras.rpc.servlet.src.dir}" />
+			<exclude name="com/google/gwt/user/client/translatable/**" />
 			<classpath>
 				<path refid="framework.common.lib.path" />
 				<pathelement path="${framework.entity.build.dir}" />
 			</classpath>
 			<compilerarg value="${alcina.compiler.args}" />
 		</javac>
- 
+
 		<mkdir dir="${extras.misc.build.dir}" />
 		<javac target="8" source="8" includeantruntime="false" debug="on" destdir="${extras.misc.build.dir}">
 			<classpath>
@@ -323,7 +323,20 @@
 				<exclude name="**/*.class" />
 			</fileset>
 		</jar>
+		<delete file="${framework.dist.dir}/${ant.project.name}-servlet-logging.jar" if:true="${alcina.delete-before-jars}" />
 
+		<jar update="${alcina.update-jars}" destfile="${framework.dist.dir}/${ant.project.name}-servlet-logging.jar">
+			<metainf dir="${framework.servlet.base.dir}/META-INF" />
+			<fileset dir="${framework.servlet.build.dir}">
+				<include name="cc/alcina/framework/servlet/logging/*.*" />
+			</fileset>
+			<fileset dir="${framework.servlet.base.dir}/src">
+				<include name="cc/alcina/framework/servlet/logging/*.*" />
+
+				<include name="**/*.java" />
+				<exclude name="**/*.class" />
+			</fileset>
+		</jar>
 		<delete file="${framework.dist.dir}/${ant.project.name}-servlet.jar" if:true="${alcina.delete-before-jars}" />
 
 		<jar update="${alcina.update-jars}" destfile="${framework.dist.dir}/${ant.project.name}-servlet.jar">
