Move gsheet accessors; fix segment loader

--- a/build.properties
+++ b/build.properties
@@ -33,6 +33,7 @@ framework.classmeta.lib.dir=${framework.lib.dir}/classmeta
 framework.common.lib.dir=${framework.lib.dir}/common
 framework.entity.lib.dir=${framework.lib.dir}/entity
 framework.servlet.lib.dir=${framework.lib.dir}/servlet
+framework.google.lib.dir=${framework.lib.dir}/google
 framework.impl.jboss-hibernate.lib.dir=${framework.lib.dir}/impl/jboss-hibernate
 framework.dist.dir=${alcina.home}/dist
 
