--- a/framework/servlet/src/cc/alcina/framework/servlet/servlet/loglevels.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/servlet/loglevels.properties
@@ -1,11 +1,11 @@
 log.level.cc.alcina.framework.common.client.domain.Domain=WARN
 log.level.cc.alcina.framework.common.client.domain.search.DomainSearcher=INFO
 log.level.cc.alcina.framework.entity.domaintransform.event.DomainTransformPersistenceQueue=INFO
-log.level.cc.alcina.framework.entity.entityaccess.cache.DomainStore.__metric=INFO
-log.level.cc.alcina.framework.entity.entityaccess.cache.DomainStore=INFO
+log.level.cc.alcina.framework.entity.persistence.cache.DomainStore.__metric=INFO
+log.level.cc.alcina.framework.entity.persistence.cache.DomainStore=INFO
 log.level.cc.alcina.framework.servlet.servlet.control.AppLifecycleManager=INFO
-log.level.cc.alcina.framework.entity.entityaccess.cache.mvcc.Transaction=INFO
-log.level.cc.alcina.framework.entity.entityaccess.cache.mvcc.Vacuum=INFO
+log.level.cc.alcina.framework.entity.persistence.mvcc.Transaction=INFO
+log.level.cc.alcina.framework.entity.persistence.mvcc.Vacuum=INFO
 log.level.org.apache.kafka=WARN
 log.level.org.apache.http=WARN
 log.level.org.apache.http.wire=WARN
