Another delicious mvcc.jobs point - pre-alpha

--- a/framework/servlet/src/cc/alcina/framework/servlet/job2/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/job2/Bundle.properties
@@ -1,1 +1,3 @@
-JobRegistry.persistConsoleJobs=false
+JobRegistry.persistConsoleJobs=true
+JobRegistry.allJobsDisabled=false
+JobQueue.logMetadataTimeouts=no-match
