--- a/framework/entity/src/cc/alcina/framework/entity/persistence/transform/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/persistence/transform/Bundle.properties
@@ -4,3 +4,4 @@ TransformCommit.commitTestTransforms=true
 TransformCommit.persistOfflineTransformsAsOneTransaction=false
 BackendTransformQueue.loopDelay=5000
 TransformCommit.commitAsWrapperUser=false
+TransformPersister.logAllTransforms=false
