mvcc.jobs - refine sequencing, control

--- a/framework/servlet/src/cc/alcina/framework/servlet/job2/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/job2/Bundle.properties
@@ -1,3 +1,4 @@
 JobRegistry.persistConsoleJobs=true
 JobRegistry.allJobsDisabled=false
 JobQueue.logMetadataTimeouts=no-match
+JobRegistry.joinClusteredJobs=true
