mvcc.jobs - rework permissions (somewhat), polish

--- a/framework/entity/src/cc/alcina/framework/entity/persistence/transform/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/persistence/transform/Bundle.properties
@@ -5,3 +5,4 @@ TransformCommit.persistOfflineTransformsAsOneTransaction=false
 BackendTransformQueue.loopDelay=5000
 TransformCommit.commitAsWrapperUser=false
 TransformPersister.logAllTransforms=false
+TransformPersisterInPersistenceContext.persistAllTransforms=false
