--- a/framework/entity/src/cc/alcina/framework/entity/transform/event/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/transform/event/Bundle.properties
@@ -1,2 +1,1 @@
-DomainTransformPersistenceQueue.ignoreForQueueingIds=
-DomainTransformPersistenceQueue.timeoutMs=30000
+DomainTransformPersistenceQueue.noDbRequestWait=false
