Work on job clusters

--- a/framework/servlet/src/cc/alcina/framework/servlet/job2/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/job2/Bundle.properties
@@ -2,3 +2,4 @@ JobRegistry.persistConsoleJobs=true
 JobRegistry.allJobsDisabled=false
 JobQueue.logMetadataTimeouts=no-match
 JobRegistry.joinClusteredJobs=true
+JobScheduler.visibleInstanceRegex=.+
