Work on job reaping

--- a/framework/servlet/src/cc/alcina/framework/servlet/job2/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/job2/Bundle.properties
@@ -3,3 +3,4 @@ JobRegistry.allJobsDisabled=false
 JobQueue.logMetadataTimeouts=no-match
 JobRegistry.joinClusteredJobs=true
 JobScheduler.visibleInstanceRegex=.+
+JobScheduler.abortDisabled=false
