mvcc.jobs refactor; fixes

--- a/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
@@ -1,1 +1,7 @@
-JobRegistry1.launcherName=
+JobRegistry.persistConsoleJobs=true
+JobRegistry.allJobsDisabled=false
+JobQueue.logMetadataTimeouts=no-match
+JobRegistry.joinClusteredJobs=true
+JobScheduler.visibleInstanceRegex=.+
+JobScheduler.abortDisabled=false
+JobScheduler.testSchedules=false
