Rework per-user publication counters

--- a/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
@@ -5,3 +5,4 @@ JobRegistry.joinClusteredJobs=true
 JobScheduler.visibleInstanceRegex=.+
 JobScheduler.abortDisabled=false
 JobScheduler.testSchedules=false
+JobScheduler.minimumVisibleInstancesForOrphanProcessing=1
