mvcc.jobs.allocator point

--- a/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
@@ -5,4 +5,5 @@ JobRegistry.joinClusteredJobs=true
 JobScheduler.visibleInstanceRegex=.+
 JobScheduler.abortDisabled=false
 JobScheduler.testSchedules=false
+JobScheduler.testVmLocalSchedules=false
 JobScheduler.minimumVisibleInstancesForOrphanProcessing=1
