Work on queue performance

--- a/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
@@ -6,4 +6,5 @@ JobScheduler.visibleInstanceRegex=.+
 JobScheduler.abortDisabled=false
 JobScheduler.testSchedules=false
 JobScheduler.testVmLocalSchedules=false
+JobScheduler.scheduleClusterJobs=true
 JobScheduler.minimumVisibleInstancesForOrphanProcessing=1
