--- a/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
@@ -8,3 +8,4 @@ JobScheduler.testSchedules=false
 JobScheduler.testVmLocalSchedules=false
 JobScheduler.scheduleClusterJobs=true
 JobScheduler.minimumVisibleInstancesForOrphanProcessing=1
+JobRegistry.trackInternalMetrics=false
