--- a/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
@@ -9,3 +9,4 @@ JobScheduler.testVmLocalSchedules=false
 JobScheduler.scheduleClusterJobs=true
 JobScheduler.minimumVisibleInstancesForOrphanProcessing=1
 JobRegistry.trackInternalMetrics=false
+JobScheduler.forceProcessOrphans=false
