Work on allocator transactions

--- a/framework/entity/src/cc/alcina/framework/entity/persistence/mvcc/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/persistence/mvcc/Bundle.properties
@@ -1,7 +1,7 @@
 ClassTransformer.checkClassCorrectness=true
 ClassTransformer.checkClassCorrectnessForceOk=false
 ClassTransformer.checkClassCorrectness.superClassFilter=
-Transaction.retainTransactionStartTrace=true
+Transaction.retainTraces=true
 ClassTransformer.cancelStartupIfInvalid=true
 Transaction.debugSetPhase=false
 Transactions.debugVacuum=false
