Add scheduling tools

--- a/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
@@ -3,9 +3,10 @@ JobQueue.logMetadataTimeouts=no-match
 JobRegistry.joinClusteredJobs=true
 JobScheduler.visibleInstanceRegex=.+
 JobScheduler.abortDisabled=false
-JobScheduler.testSchedules=false
-JobScheduler.testVmLocalSchedules=false
+JobScheduler.testSchedules=true
+JobScheduler.testVmLocalSchedules=true
 JobScheduler.scheduleClusterJobs=true
 JobScheduler.minimumVisibleInstancesForOrphanProcessing=1
 JobRegistry.trackInternalMetrics=false
 JobScheduler.forceProcessOrphans=false
+JobScheduler.testFuturesToPending=false
