Work on job reports

--- a/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/job/Bundle.properties
@@ -10,3 +10,4 @@ JobScheduler.minimumVisibleInstancesForOrphanProcessing=1
 JobRegistry.trackInternalMetrics=false
 JobScheduler.forceProcessOrphans=false
 JobScheduler.testFuturesToPending=false
+JobScheduler.canFuturesToPending=true
