--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry excluding="org/json/|registry.properties" kind="src" path="framework/entity/src"/>
 	<classpathentry kind="src" path="framework/impl/jboss-hibernate/src"/>
 	<classpathentry excluding="com/google/gwt/user/client/impl/*|com/google/gwt/user/client/ui/PopupPanel.java|registry.properties" kind="src" path="framework/gwt/src"/>
-	<classpathentry kind="src" path="framework/servlet/src"/>
+	<classpathentry excluding="registry.properties" kind="src" path="framework/servlet/src"/>
 	<classpathentry kind="src" path="extras/cluster/tasks-src"/>
 	<classpathentry kind="src" output="extras/dev/bin" path="extras/dev/src"/>
 	<classpathentry excluding="cc/alcina/extras/misc/ie/override/" kind="src" path="extras/misc/src"/>
