--- a/build.properties
+++ b/build.properties
@@ -89,6 +89,7 @@ framework.gwt.jvm.maxHeapSizeMb=2000
 #Javadoc comp
 framework.gwt.classpath.dev.lib=${framework.lib.dir}/gwt/gwt-dev.jar
 ant.build.javac.target=1.8
+ant.build.javac.source=1.8
 
 #zap UA-specific compilation for non-dev builds
 gwt.replace.1=<set-property name="user.agent" value="safari" />
