Rework proxy routing

--- a/framework/servlet/src/cc/alcina/framework/servlet/servlet/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/servlet/Bundle.properties
@@ -5,3 +5,4 @@ CommonRemoteServiceServlet.metricTrackerMs=0
 TailServlet.file=/opt/jboss/wildfly/standalone/log/server.log
 AppLifecycleServletBase.allowAllHostnameVerifier=true
 HttpContext.secure=false
+RpcRequestRouter.requestHandlerUrl=
